# HairSimulation

./: .gitignore  .gitmodules  Bézier Curves and Surfaces: the Utah Teapot (Rendering Curves as Geometry: Hair Rendering).desktop  How to draw thick and smooth 3D lines in OpenSceneGraph \ OpenGL Victoria Rudakova.desktop  README.md  glLineWidth - OpenGL 4 Reference Pages.desktop
applet/: BUILD.md  CMakeLists.txt  README.md
applet/cmake/: FindNanoGUI.cmake  FindSurfaceMesh.cmake  FindTetGen.cmake
applet/projdyn/: CMakeLists.txt  Constraint.h  Edge.h  PDConstraint.h  Quaternion.cpp  Quaternion.h  main.cpp  projdyn.h  projdyn_api.cpp  projdyn_api.h  projdyn_types.h  viewer.h
papers/: Adaptive Nonlinearity for Collisions in Complex Rod Assemblies
